--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>campus-transaction</display-name>
   <welcome-file-list>
-    <welcome-file>user-login.jsp</welcome-file>
+    <welcome-file>user-index.jsp</welcome-file>
   </welcome-file-list>
   
   <filter>
